--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
+
 <!DOCTYPE html>
 <html lang="en-US">
     <!--<![endif]-->
@@ -7,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Imminent - The most spectacular coming soon template!
+            @er.kirhan
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
@@ -70,7 +69,10 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            IMMINENT
+                            Myr Sanam
+                        </h2>
+                        <h2>
+                            coming soon
                         </h2>
                         <span class="line"></span>
                     </div>
@@ -89,7 +91,7 @@
                         </h1>
 
                         <p class="sub-title">
-                            The most spectacular coming soon template!
+                             to conquer!
                         </p>
                     </div>
                 </li>
@@ -169,8 +171,8 @@
                                 <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
-                        Theme by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-                        <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a>
+                        Theme by <a href="er.kirhan" target="_blank">@er.kirhan</a>
+                        <!-- <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a> -->
                     </div>
                 </li>
             </ul>
