--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            Myr Sanam
+                            My Sanam
                         </h2>
                         <h2>
                             coming soon
