--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <title>
-            @er.kirhan
-        </title><!-- Behavioral Meta Data -->
+            Init Solutions
+        </title>
         
         <link href="favicon.png" rel="shortcut icon" type="image/png">
 
@@ -21,14 +21,19 @@
         <link href="css/normalize.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <!--[if lt IE 9]>
-            <link rel="stylesheet" type="text/css" href="css/ie.css" />
-        <![endif]-->
-        <!-- Javascript -->
+        
 
         <script src="js/jquery.js"></script>
     </head>
     <body>
+        <nav class="navbar">
+            <ul class="navbar-list">
+                <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
+                <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
+                <li class="navbar-item"><a href="#" class="navbar-link">Services</a></li>
+                <li class="navbar-item"><a href="#" class="navbar-link">Products</a></li>
+            </ul>
+        </nav>
         <div class="preloader">
             <div class="loading">
                 <h2>
@@ -53,12 +58,11 @@
 
                 <li class="layer" data-depth="0.20">
                     <div class="title">
-                        <h2>
-                            My Sanam
+                        <h2 style="color: white;">
+                            Bringing IdeaS To Life
                         </h2>
-                        <h2>
-                            coming soon
-                        </h2>
+                        <h2 style="color: white;">
+                            </h2>
                         <span class="line"></span>
                     </div>
                 </li>
@@ -71,12 +75,14 @@
 
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
-                        <h1 id="countdown">
-                            The most spectacular coming soon template!
+                        <h1 id="countdown" style="color: white;">
+                            Initiate The !nnovation 
+       Faster With Ease
+
                         </h1>
 
-                        <p class="sub-title">
-                             to conquer!
+                        <p class="sub-title" >
+                           TECHNOLOGY AT ITS FINEST
                         </p>
                     </div>
                 </li>
@@ -156,7 +162,7 @@
                                 <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
-                        By <a href="er.kirhan" target="_blank">er.kirhan</a>
+                        By <a href="INIT Solutions" target="_blank">er.kirhan</a>
                         <!-- <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a> -->
                     </div>
                 </li>
