--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <nav class="navbar">
             <ul class="navbar-list">
-                <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
+                <li class="navbar-item" ><a href="#" class="navbar-link">Home</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">About Us</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">Services</a></li>
                 <li class="navbar-item"><a href="#" class="navbar-link">Products</a></li>
@@ -50,7 +50,7 @@
                 <!-- BG -->
 
                 <li class="layer" data-depth="0.10">
-                    <div class="background">
+                    <div class="background" >
                     </div>
                 </li>
 
@@ -59,7 +59,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2 style="color: white;">
-                            Bringing IdeaS To Life
+                           Erkirhan Bringing IdeaS To Life
                         </h2>
                         <h2 style="color: white;">
                             </h2>
@@ -76,7 +76,7 @@
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
                         <h1 id="countdown" style="color: white;">
-                            Initiate The !nnovation 
+                            Initiate The !nnovations  
        Faster With Ease
 
                         </h1>
