--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
-                        By <a href="INIT Solutions" target="_blank"></a>
+                        By Er.Kirhan <a href="INIT Solutions" target="_blank"></a>
                         <!-- <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a> -->
                     </div>
                 </li>
